Fix height on Firefox; Fix underline for tag method on Safari

--- a/packages/Kifu-for-JS/css/kifuforjs.scss
+++ b/packages/Kifu-for-JS/css/kifuforjs.scss
@@ -330,3 +330,7 @@
 
 /*.kifuforjs-cell--lastfrom{background-color: #FFCC00;}
 .kifuforjs-cell--movable{background-color: #AAAAFF;}*/
+
+script[type="text/kifu"] + ins {
+    text-decoration-line: none;
+}
